src/snapshots/scooter_hx__snapshot_tests__field_error_after_popup_closed.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |  ┌─Search text (Error: Couldn't parse regex)────────────────────────────────────────────────────────────────────────┐  |
01 |  │(                                                                                                                 │  |
02 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
03 |  ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
04 |  │                                                                                                                  │  |
05 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
06 |  ┌───┐                                                                                                                 |
07 |  │   │ Fixed strings                                                                                                   |
08 |  └───┘                                                                                                                 |
09 |  ┌───┐                                                                                                                 |
10 |  │   │ Match whole word                                                                                                |
11 |  └───┘                                                                                                                 |
12 |  ┌───┐                                                                                                                 |
13 |  │ X │ Match case                                                                                                      |
14 |  └───┘                                                                                                                 |
15 |  ┌─Files to include─────────────────────────────────────────────────────────────────────────────────────────────────┐  |
16 |  │                                                                                                                  │  |
17 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
18 |  ┌─Files to exclude─────────────────────────────────────────────────────────────────────────────────────────────────┐  |
19 |  │                                                                                                                  │  |
20 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
21 |                                                                                                                        |
22 |  Results: 0 [Invalid search]                                                                                           |
23 |                                                                                                                        |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |                   <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit                   |
tags:
00: 2-15 focused-field | 15-45 error | 45-118 focused-field
01: 2-3 focused-field | 3-4 text | 117-118 focused-field
02: 2-118 focused-field
03: 2-118 text
04: 2-3 text | 117-118 text
05: 2-118 text
06: 2-7 text
07: 2-3 text | 6-7 text | 8-21 text
08: 2-7 text
09: 2-7 text
10: 2-3 text | 6-7 text | 8-24 text
11: 2-7 text
12: 2-7 text
13: 2-7 text | 8-18 text
14: 2-7 text
15: 2-118 text
16: 2-3 text | 117-118 text
17: 2-118 text
18: 2-118 text
19: 2-3 text | 117-118 text
20: 2-118 text
22: 2-12 text | 12-29 error
39: 19-101 info
cursor: 4,1
