src/snapshots/scooter_hx__snapshot_tests__field_error_popup.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |      ┌─Search text (Error: Couldn't parse regex)────────────────────────────────────────────────────────────────┐      |
01 |      │(                                                                                                         │      |
02 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
03 |      ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────┐      |
04 |      │                                                                                                          │      |
05 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
06 |      ┌───┐                                                                                                             |
07 |      │   │ Fixed strings                                                                                               |
08 |      └───┘                                                                                                             |
09 |      ┌───┐                                                                                                             |
10 |      │   │ Match whole word                                                                                            |
11 |      └───┘                                                                                                             |
12 |      ┌───┐                                                                                                             |
13 |      │ X │ Match case                                                                                                  |
14 |      └───┘                                                                                                             |
15 |      ┌─Files to include─────────────────────────────────────────────────────────────────────────────────────────┐      |
16 |      │  ┌───────────────────────────────────────────────Errors───────────────────────────────────────────────┐  │      |
17 |      └──│ Search text                                                                                        │──┘      |
18 |      ┌─F│ regex parse error:                                                                                 │──┐      |
19 |      │  │     (                                                                                              │  │      |
20 |      └──│     ^                                                                                              │──┘      |
21 |         │ error: unclosed group                                                                              │         |
22 |      Res└────────────────────────────────────────────────────────────────────────────────────────────────────┘         |
23 |                                                                                                                        |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |                   <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit                   |
tags:
00: 6-19 active | 19-49 error | 49-114 active
01: 6-7 active | 7-8 text | 113-114 active
02: 6-114 active
03: 6-114 text
04: 6-7 text | 113-114 text
05: 6-114 text
06: 6-11 text
07: 6-7 text | 10-11 text | 12-25 text
08: 6-11 text
09: 6-11 text
10: 6-7 text | 10-11 text | 12-28 text
11: 6-11 text
12: 6-11 text
13: 6-11 text | 12-22 text
14: 6-11 text
15: 6-114 text
16: 6-7 text | 9-57 popup-border | 57-63 popup | 63-111 popup-border | 113-114 text
17: 6-9 text | 9-10 popup-border | 10-11 popup | 11-22 active | 22-110 popup | 110-111 popup-border | 111-114 text
18: 6-9 text | 9-10 popup-border | 10-11 popup | 11-29 error | 29-110 popup | 110-111 popup-border | 111-114 text
19: 6-7 text | 9-10 popup-border | 10-11 popup | 11-16 error | 16-110 popup | 110-111 popup-border | 113-114 text
20: 6-9 text | 9-10 popup-border | 10-11 popup | 11-16 error | 16-110 popup | 110-111 popup-border | 111-114 text
21: 9-10 popup-border | 10-11 popup | 11-32 error | 32-110 popup | 110-111 popup-border
22: 6-9 text | 9-111 popup-border
39: 19-101 info
